--- a/src/scss/helpers/helpers.scss
+++ b/src/scss/helpers/helpers.scss
@@ -753,3 +753,64 @@ a {
 
 
 .main-btn{ padding: 0 10px;}
+
+.zingsa .crossword{
+	max-width: 400px;
+	margin: 0 auto;
+}
+.direction{
+	width: 100%;
+	overflow: auto;
+	clear: both;
+	height: 100%;
+	display: inline-grid;
+	grid-auto-rows: 110px;
+	gap: 5px 15px;
+	justify-content: start;
+		&:first-of-type{
+		grid-template-rows: 0.5fr 1fr 1fr 1fr;
+		grid-template-areas:
+    "header header"
+		". ."
+		". ."
+		". .";
+	}
+	&:last-of-type{
+		grid-template-rows: 0.5fr 1fr 1fr;
+		grid-template-areas:
+    "header header"
+		". ."
+		". .";
+
+	}
+	grid-auto-rows: 110px;
+	gap: 5px 15px;
+	margin: 0 10px;
+
+}
+.clues{
+	margin: 0 auto;
+	text-align: center;
+	max-width: 600px;
+}
+.direction .clue{
+	color: white;
+	font-weight: bold;
+	font-family: $third__font;
+	font-size:14px;
+	display: inline-flex;
+	align-items: center;
+	vertical-align: text-top;
+	min-height: 100px;
+	border: 1px solid white;
+	margin: 0;
+	padding: 0 2px;
+	 text-align: center;
+	 max-width: 90px;
+}
+.clues .header { grid-area: header; height: 30px; }
+
+
+// .direction .header{
+// 	display: none;
+// }
