--- a/src/scss/helpers/helpers.scss
+++ b/src/scss/helpers/helpers.scss
@@ -69,7 +69,7 @@
 .deck .card {
 	height: 165px;
 	width: 165px;
-	background: #eee;
+	background: #000;
 	font-size: 0;
 	color: #ffffff;
 	border-radius: 8px;
@@ -255,7 +255,7 @@
 	// height: 50px;
 	height: 165px;
 	width: 165px;
-	background: #eee;
+	background: #000;
 	font-size: 0;
 	color: #ffffff;
 	border-radius: 8px;
@@ -760,57 +760,79 @@ a {
 }
 .direction{
 	width: 100%;
-	overflow: auto;
-	clear: both;
-	height: 100%;
+	// height: 100%;
 	display: inline-grid;
-	grid-auto-rows: 110px;
-	gap: 5px 15px;
+	// gap: 5px 15px;
 	justify-content: start;
-		&:first-of-type{
-		grid-template-rows: 0.5fr 1fr 1fr 1fr;
-		grid-template-areas:
-    "header header"
-		". ."
-		". ."
-		". .";
-	}
-	&:last-of-type{
-		grid-template-rows: 0.5fr 1fr 1fr;
-		grid-template-areas:
-    "header header"
-		". ."
-		". .";
 
+
+
+	&:before{
+		color: white;
+		font-family: $second__font;
+		display: block;
+		width: 100%;
+		height: 20px;
+		font-size:24px;
+		margin-bottom: 20px;
 	}
-	grid-auto-rows: 110px;
-	gap: 5px 15px;
-	margin: 0 10px;
+
+	&:first-of-type:before{
+		content: 'Linha';
+	}
+
+	&:last-of-type:before{
+		content: 'Coluna';
+	}
 
 }
 .clues{
-	margin: 0 auto;
+		position: absolute;
+		opacity: 0.8;
+	background: black;
+	box-shadow: 0 0 550px 300px rgb(0 0 0 / 70%);
+	// display: block;
 	text-align: center;
-	max-width: 600px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 175px;
+    max-height: 460px;
+    overflow-y: scroll;
+
 }
 .direction .clue{
-	color: white;
+	color: #13ff9e;
+	border-radius: 3px;
 	font-weight: bold;
 	font-family: $third__font;
 	font-size:14px;
-	display: inline-flex;
+
+		display: inline-flex;
 	align-items: center;
 	vertical-align: text-top;
-	min-height: 100px;
-	border: 1px solid white;
-	margin: 0;
-	padding: 0 2px;
+
+	margin: 15px 0;
 	 text-align: center;
-	 max-width: 90px;
+	 max-width: 150px;
 }
 .clues .header { grid-area: header; height: 30px; }
+.crossword-wrapper{
+	position: relative;
+	display: flex;
+	justify-content: center;
+	padding-bottom: 75px;
+}
+.crossword-wrapper .crossword{
+	max-width:450px;
+}
+
+.direction .header{
+	display: none;
+}
 
 
-// .direction .header{
-// 	display: none;
-// }
+.tips-btn{
+	border:0;
+	background-color: yellow;
+}
